--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "generalisol-website",
   "version": "1.0.0",
-  "description": "General Isolierungen GmbH Website",
   "scripts": {
-    "build": "echo 'Static website - no build needed'",
-    "start": "echo 'Static website'"
+    "build": "cp index.html out/index.html || mkdir -p out && cp index.html out/index.html",
+    "start": "echo 'Static website'",
+    "dev": "echo 'Development mode'"
   },
-  "dependencies": {},
+  "dependencies": {
+    "next": "^14.0.0",
+    "react": "^18.0.0", 
+    "react-dom": "^18.0.0"
+  },
   "devDependencies": {}
 }
