--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
   "public": true,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/public/$1"
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
